# sovereign-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  langgraph.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  e2e.yml  integration.yml
deploy/: README.md  deploy.sh  install-services.sh  restart.sh  smoke.sh  start-all.sh  stop-all.sh
deploy/launchd/: dev.sovereign-rag.api.plist  dev.sovereign-rag.frontend.plist  dev.sovereign-rag.langgraph.plist
deploy/searxng/: settings.yml
docs/: architecture.md  claude-design-agent-native-chat-prompt.md  crag-hitl-design-prompt.md  frontend-redesign-prompt.md  shadcn-component-reference.md  ui-design-brief.md
docs/superpowers/plans/: 2026-06-02-corrective-rag-api-sse-runs.md  2026-06-02-corrective-rag-backend-core.md  2026-06-02-corrective-rag-eval.md  2026-06-02-corrective-rag-frontend.md  2026-06-03-react-agentic-rag-plan-1-foundations.md  2026-06-03-react-agentic-rag-plan-2-agent-loop.md  2026-06-03-react-agentic-rag-plan-3-api-sse.md  2026-06-03-react-agentic-rag-plan-4-eval.md  2026-06-03-react-agentic-rag-plan-5-frontend.md  2026-06-04-agent-native-chat-redesign.md  2026-06-20-admin-editable-embeddings.md  2026-06-20-openai-model-migration.md  2026-06-20-retrieval-inspector-provenance.md
docs/superpowers/specs/: 2026-06-02-corrective-rag-hitl-design.md  2026-06-03-react-agentic-rag-design.md  2026-06-04-agent-native-chat-redesign-design.md  2026-06-20-admin-editable-embeddings-design.md  2026-06-20-context-docs-ingestion-design.md  2026-06-20-openai-model-migration-design.md  2026-06-20-retrieval-inspector-provenance-design.md
eval/: __init__.py  evaluate.py  graph_eval.py  qa_pairs.json  ragas_eval.py  results.json  retrieval_metrics.py  web_fixture.py
eval/corpus/: asyncio-blocking.md  asyncio-event-loop.md  asyncio-tasks.md
eval/fixtures/web/: hits.json
eval/fixtures/web/pages/: ferret-activation.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf.template  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend-v2/: package-lock.json  package.json  vite.config.ts
frontend-v2/src/: index.css
frontend-v2/src/components/: brand-mark.tsx  health-pill.tsx  page-stub.tsx  user-menu.tsx
frontend-v2/src/hooks/: use-ask-stream.ts  use-library.ts  use-settings.ts
frontend-v2/src/lib/: api.ts  i18n.ts  utils.ts
frontend-v2/src/locales/: en.json
frontend-v2/src/pages/: Settings.tsx
frontend/scripts/: capture-artboards.py
frontend/src/: App.tsx  Artboards.tsx  AskScreen.tsx  ComponentsSheet.tsx  index.css  main.tsx
frontend/src/components/: AppShell.tsx  AppTopBar.tsx  ApprovalCard.tsx  CitationChip.tsx  Composer.tsx  Empty.tsx  ErrorBanner.tsx  PipelineStatus.tsx  PrimaryNav.tsx  SourceCard.tsx  SourcesRail.tsx  ThreadHead.tsx  ThreadsRail.tsx  TopBar.tsx  Turn.tsx  app-sidebar.tsx  command-palette.tsx  mobile-tab-bar.tsx  topbar.tsx  user-menu.tsx
frontend/src/components/ask/: agent-trace.tsx  approval-card.tsx  citation-chip.tsx  composer.tsx  context-manager-sheet.tsx  conversation-turn.tsx  markdown-answer.tsx  pipeline-strip.tsx  process-block.tsx  retrieval-section.test.tsx  retrieval-section.tsx  sources-disclosure.tsx  sources-rail.tsx  states.tsx  turn-inspector-sheet.tsx  turns.tsx
frontend/src/features/: CommandPalette.tsx  ContextManager.tsx  IngestSheet.tsx  RetrievalInspector.tsx  SettingsPanel.tsx  SourceDetailDrawer.tsx
frontend/src/hooks/: use-ask-stream.ts  use-ask.ts  use-evals.ts  use-graph.ts  use-ingest.ts  use-runs.ts  use-settings.ts  use-source-detail.ts  use-thread-context.ts  use-threads.ts  useCorpus.ts  useRun.ts  useThreads.ts
frontend/src/lib/: api.ts  citation-kind.test.ts  citation-kind.ts  format.ts  langgraph.ts  render-answer.tsx  route.ts  theme.tsx  types.ts
frontend/src/locales/: en.json  ru.json
frontend/src/pages/: Ask.tsx  Evals.tsx  Graph.tsx  History.tsx  Ingest.tsx  Library.tsx  Settings.tsx  Threads.tsx
frontend/src/screens/: Evals.tsx  GlobalSettings.tsx  GraphExplorer.tsx  Ingest.tsx  Library.tsx  LibraryDetail.tsx  RunHistory.tsx  ThreadsPage.tsx
frontend/src/styles/: ask.css  tokens.css
frontend/tests/api/: langgraph.spec.ts
frontend/tests/e2e/: ask-screen.spec.ts
scripts/: ingest_context_docs.py  ingest_product_md.py  smoke_rag_qa_local.py  wipe.py
src/sovereign_rag/: __init__.py  admin.py  api.py  api_extras.py  chunking.py  config.py  documents.py  embeddings_registry.py  reindex.py  thread_context.py
src/sovereign_rag/agent/: __init__.py  _deps.py  graph.py  nodes.py  state.py
src/sovereign_rag/api/: __init__.py  dependencies.py  main.py
src/sovereign_rag/graph/: __init__.py  neo4j_store.py
src/sovereign_rag/graphs/: __init__.py
src/sovereign_rag/ingestion/: __init__.py  context_docs.py  pdf.py  product_md.py  search.py  web.py
src/sovereign_rag/providers/: __init__.py  ollama.py  reranker.py
src/sovereign_rag/retrieval/: __init__.py  grading.py  pipeline.py  trace.py
src/sovereign_rag/shared/: __init__.py  checkpoint_serde.py  llm_factory.py  pg_pool.py  pipeline_deps.py  tracing.py
src/sovereign_rag/vectorstore/: __init__.py  milvus_store.py
tests/: test_admin_wipe.py  test_agent.py  test_agent_loop.py  test_agent_state.py  test_agent_tools.py  test_api.py  test_ask_interrupt.py  test_ask_stream_agent.py  test_checkpoint_serde.py  test_config_crag.py  test_context_docs_ingestion.py  test_custom_events.py  test_embeddings_registry.py  test_eval.py  test_grading.py  test_graph_eval.py  test_index_document_fast.py  test_ingestion.py  test_milvus_export.py  test_milvus_store.py  test_neo4j_reembed.py  test_neo4j_store.py  test_pipeline.py  test_product_md_parser.py  test_rag_qa.py  test_rag_qa_graph.py  test_reindex.py  test_reranker.py  test_retrieval_trace.py  test_runs_crag.py  test_settings_embed_patch.py  test_settings_patch_reembed.py  test_settings_persistence.py  test_web_fixture.py
(+73 files in other folders)
