[project]
name = "sovereign-rag"
version = "0.1.0"
description = "Local-first GraphRAG: Milvus hybrid (dense+BM25) retrieval + Neo4j knowledge-graph local-search + cross-encoder reranking + contextual retrieval. Local-dev runs entirely on Ollama with no paid APIs; the CI integration tier swaps in Ollama Cloud + OpenAI embeddings. Web ingestion via Docling / Crawl4AI / SearXNG."
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Muhriddin", email = "wg.super.statist@gmail.com" }]

dependencies = [
    # ---- LangChain core ----
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langchain-text-splitters>=1.0",
    # ---- LangGraph: control-plane orchestration (StateGraph, conditional
    # edges, HITL interrupt, persistent state via checkpointer). The data
    # plane (Milvus/Neo4j async clients) stays direct — LangChain wrappers
    # don't expose Milvus's native BM25 hybrid or Neo4j GraphRAG local-search.
    "langgraph>=1.0",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.2",
    "langgraph-cli[inmem]>=0.4",        # provides `langgraph dev` + Studio
    "langgraph-api>=0.8",               # direct pin so we get the latest server
    "langgraph-runtime-inmem>=0.28",
    # ---- Document parsing: Docling — layout-aware PDF/DOCX → markdown ----
    "docling>=2.0",
    # ---- Ollama: LLM + embeddings ----
    "langchain-ollama>=0.2",
    "ollama>=0.3",
    # ---- OpenAI embeddings ----
    "langchain-openai>=1.0",
    # ---- Vector DB: Milvus (dense + native BM25 hybrid) ----
    "pymilvus>=2.6",
    # ---- Knowledge graph: Neo4j Community ----
    "neo4j>=5.20",
    "neo4j-graphrag>=1.0",
    # ---- Reranking: cross-encoder via sentence-transformers ----
    "sentence-transformers>=3.0",
    # ---- Web ingestion ----
    "crawl4ai>=0.7",
    "ddgs>=9.0",
    "httpx>=0.27",
    # ---- API ----
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    # ---- Observability ----
    "langfuse>=3.0",
    # OTEL → Langfuse direct ingest. The CallbackHandler path drops spans on
    # async LangGraph (langfuse#8780, #10721); going through OTEL with the
    # OpenInference LangChain instrumentor gives full node-level traces.
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "openinference-instrumentation-langchain>=0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "respx>=0.21",
    # ragas has an unconditional `from langchain_community.chat_models.vertexai import
    # ChatVertexAI` at module load (still present in 0.4.x). langchain-community ≥ 0.3
    # removed that submodule. eval/ragas_eval.py installs a sys.modules stub to satisfy
    # the import before evaluate() runs.
    "ragas>=0.2",
    # ragas pulls `datasets`; force modern resolution against current pyarrow.
    "datasets>=3.2",
    "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sovereign_rag"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF", "ASYNC", "G", "T20", "S"]
ignore = ["E501", "S101", "B008", "S105", "S104"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "T20"]
"eval/**/*.py" = ["T20"]
# PRODUCT.md is a Russian-language corpus — the parser intentionally matches
# Cyrillic markers (В:, О:) that ruff flags as visually ambiguous with B/O.
"src/sovereign_rag/ingestion/product_md.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_product_md_parser.py" = ["RUF001", "RUF002", "RUF003"]
"scripts/ingest_product_md.py" = ["T20"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: tests that need Milvus/Neo4j/Ollama running",
    "unit: pure unit tests",
]
